v 2.10.2 >> fix statuses tag not showing

--- a/styles/mist-hud.css
+++ b/styles/mist-hud.css
@@ -391,6 +391,10 @@ hr {
   font-style: italic;
 }
 
+.mh-status i{
+  font-size: 0.75em;
+}
+
 /* Status Types */
 .mh-status.neutral {
   background: none;
@@ -418,15 +422,19 @@ hr {
 }
 
 .mh-modifier-bar {
+  position: sticky;
+  bottom: 0;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   padding: 10px;
-  gap: 5px; /* Adds space between elements */
+  gap: 5px;
   border-top: 1px solid #ccc;
-  height: 25px;
-  width: 100%; /* Full width of the container */
+  background-color: #222;
+  height: 28px;
+  width: 100%;
+  z-index: 10;
 }
 
 .mh-mod-button,
